<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">书柜儿</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lock_test">LOCK TEST</string>
    <string name="rifid_test">RIFID TEST</string>
    <string name="inreader_test">ID_READER_TEST</string>
    <string name="tv_uid">UID</string>
    <string name="tv_protocol">Protocol</string>
    <string name="tv_tagType">Type</string>
    <string name="tv_inventoryCnt">Count</string>
    <string name="btn_startInventory">Start</string>
    <string name="btn_stopInventory">Stop</string>
    <string name="btn_paraInventory">Parameter</string>
    <string name="btn_clearList">Clear</string>
    <string name="tv_inventoryInfo">Tag:0;Loop:0;Failed:0</string>
    <string name="check_useDefault">Default protocol</string>
    <string name="check_onlyReadNew">Only read new tag</string>
    <string name="check_matchAFI">Math AFI</string>
    <string name="check_buzzer">Buzzer when read</string>
    <string name="check_real_mode">Real show tag</string>
    <string name="tv_afiVal">"AFI(hex):"</string>
    <string name="ed_defaultAfi">00</string>
    <string name="btn_inventorySetCancel">Cancel</string>
    <string name="btn_inventorySetOk">Set </string>
    <string name="tx_msg_inputHexAFI">Please input the AFI(Hex).</string>
    <string name="tx_msg_certain">OK</string>
    <string name="tx_info_tagCnt">Tag:</string>
    <string name="tx_info_failCnt">; Failed:</string>
    <string name="tx_info_loopCnt">; Loop:</string>
    <string name="inventory_para_set">InventoryParaSet</string>
    <string name="tx_msg_stopInventory_tip">Pls stop Inventory First</string>

    <string name="save">保存</string>
    <string name="service_tel">TEL:029-89285041</string>
    <string name="service_tip">技术服务由书堆儿提供</string>
    <string name="login">登录</string>
    <string name="scan_qrcode_login">扫码登录</string>
    <string name="login_with_card">插卡登陆</string>
    <string name="input_pwd">请输入账号密码</string>
    <string name="back_book">还书</string>
    <string name="search_book">图书查询</string>
    <string name="reader_info">读者信息</string>
    <string name="exit_login">退出登录</string>
    <string name="borrow_book">借书</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="search">查询</string>
    <string name="overtime_tips1">友情提示：逾期滞纳金超过5元将无法进行续借</string>
    <string name="overtime_tips2">逾期滞纳金超过10元将无法借阅图书</string>
    <string name="borrow_book_tips">点击您喜欢书所在的书柜，取出书后请及时关闭柜门，谢谢配合！</string>
    <string name="box_not_closed">您还有未关闭的柜门，请先关闭柜门，再按确定按钮。</string>
    <string name="box_not_closed_exit">您还有未关闭的柜门，请先关闭柜门，再退出登录。</string>
    <string name="open_box">开柜门</string>
    <string name="refresh_box">刷新</string>
    <string name="statistics">统计</string>
    <string name="record">记录</string>
    <!--&#32; == 普通的英文半角空格

    &#160; == &nbsp; == &#xA0; == no-break space （普通的英文半角空格但不换行）

    &#12288; == 中文全角空格 （一个中文宽度）

    &#8194; == &ensp; == en空格 （半个中文宽度）

    &#8195; == &emsp; == em空格 （一个中文宽度）

    &#8197; == 四分之一em空格 （四分之一中文宽度）
    -->
    <string name="chinese_space">&#12288;</string>
    <string name="english_space">&#160;</string>
    <string name="time">时间</string>
    <string name="carry_out">取出</string>
    <string name="add">增加</string>
    <string name="sum">总数</string>

    <!--获取用户状态-->
    <!--23001（系统时间18个字符 年月日四个空格小时分钟秒）AO（图书馆ID）|AA（读者证号）|AC|AD|AY0AZ（最后四位用前面所有的字符的sum和然后取最后四个字节取补码-->
    <!--2300120180206    162150AO|AA6101008880085324|AC|AD666666|AY2AZ-->
    <string name="userstate_request">23001%1$s&#160;&#160;&#160;&#160;%2$sAO%3$s|AA%4$s|AC|AD%5$s|AY9AZ</string>

    <!--获取用户信息-->
    <!--63001+18位时间+Y（8个空格）AO|AA6101008880085324|AC|AD666666|BP00001|BQ00005AY0AZ（校验码）-->
    <!--6300120180206162150Y        AO|AA6101008880085324|AC|AD666666|BP00001|BQ00005AY0AZ-->
    <string name="userinfo_request">63001%1$sY&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;AO|AA%2$s|AC|AD%3$s|BP00001|BQ00005AY9AZ</string>

    <!--根据书籍码，获取书籍信息-->
    <!--17001（18位时间）AO|AB00834463|AY0AZ（检验码）-->
    <!--1700120180207105620AO|AB00834463|AY0AZ-->
    <string name="bookinfo_request">17001%1$sAO|AB%2$s|AY0AZ</string>

    <!--借书-->
    <!--11YN20180207    16532120180207    165321AO|AA6101008880085324|AB00834463|AC|AY3AZ-->
    <string name="borrowbook_reuqest">11YN%1$s&#160;&#160;&#160;&#160;%2$s%3$s&#160;&#160;&#160;&#160;%4$sAO|AA%5$s|AB%6$s|AC|AY9AZ</string>

    <!--还书-->
    <!--09N20180207    170405                AP|AO|AB00834463|AC|BIN|AY1AZ-->
    <string name="back_book_request">09N%1$s&#160;&#160;&#160;&#160;%2$s&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;AP|AO|AB%3$s|AC|BIN|AY9AZ</string>

    <!--续借-->
    <!--29YN20180207    16532120180207    165321AO|AA666666|AB00834463|AC|AY3AZ-->
    <string name="re_borrow_book_request">29YN%1$s&#160;&#160;&#160;&#160;%2$s%3$s&#160;&#160;&#160;&#160;%4$sAO|AA%5$s|AB%6$s|AC|AY9AZ</string>
    <string name="admin_login">管理员登录</string>
    <string name="hot_news">新闻头条</string>
    <string name="lib_intro">本馆介绍</string>
    <string name="apply_card">办证须知</string>
    <string name="open_time">开放时间</string>
    <string name="use_guide">本机指南</string>
    <string name="more">更多</string>
    <string name="input_account">请输入账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="has_borrowed">已借图书</string>
    <string name="book_name">书名</string>
    <string name="borrow_date">借阅时间</string>
    <string name="end_date">到期归还</string>
    <string name="late_days">逾期天数</string>
    <string name="has_back_book">已还图书</string>
    <string name="borrow_book_time">本次借阅</string>
    <string name="back_date">还书时间</string>

</resources>
