<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >
    
     <CheckBox
        android:id="@+id/check_realShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/check_real_mode" />

    <CheckBox
        android:id="@+id/check_buzzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="true"
        android:text="@string/check_buzzer" />

    <CheckBox
        android:id="@+id/check_onlyReadNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/check_onlyReadNew" />

    <CheckBox
        android:id="@+id/check_ISO15693"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="ISO15693" />

    <CheckBox
        android:id="@+id/check_ISO14443A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="ISO14443A" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/check_matchAFI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_matchAFI" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_afiVal" />

        <EditText
            android:id="@+id/ed_afiVal"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:inputType="text"
            android:text="@string/ed_defaultAfi" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_ant"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ant_grid_bg"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#707070"
        android:dividerHeight="1.0dip"
        android:fadingEdge="none"
        android:scrollbars="vertical"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_inventorySetCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_inventorySetCancel" />

        <Button
            android:id="@+id/btn_inventorySetOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_inventorySetOk" />
    </LinearLayout>

</LinearLayout>