<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/login"
        style="@style/titleTextStyle"
        />

    <Button
        android:id="@+id/btn_login_by_card"
        android:layout_width="@dimen/dimen_300"
        android:layout_height="@dimen/dimen_80"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textColor="@color/white"
        android:background="@drawable/icon_sure"
        android:text="@string/login_with_card"
        android:padding="0dp"
        android:textSize="@dimen/font_size_25"
        android:layout_gravity="center_horizontal"
        />
    
    <ImageView
        android:id="@+id/iv_qr_login"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/scan_qrcode_login"
        />

</LinearLayout>