<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dimen_50"
    android:paddingTop="@dimen/dimen_50">

    <LinearLayout
        android:layout_width="650dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_30"
        android:paddingLeft="@dimen/dimen_10"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_name"
            style="@style/text_info_style"
             />

        <TextView
            android:id="@+id/tv_card_number"
            style="@style/text_info_style"
            />

        <TextView
            android:id="@+id/tv_permission"
            style="@style/text_info_style"
            android:textColor="@color/colorRed" />

        <ListView
            android:id="@+id/lv_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@color/transparent"
            android:dividerHeight="0dp"
            android:listSelector="@color/transparent"
            android:scrollbars="none" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="@dimen/dimen_50"
        android:paddingTop="@dimen/dimen_50">

        <TextView
            android:id="@+id/tv_borrow_book"
            style="@style/operator_style"
            android:text="@string/borrow_book" />

        <TextView
            android:id="@+id/tv_back_book"
            style="@style/operator_style"
            android:layout_toRightOf="@+id/tv_borrow_book"
            android:text="@string/back_book" />

        <TextView
            android:id="@+id/tv_search_book"
            style="@style/operator_style"
            android:layout_below="@+id/tv_borrow_book"
            android:text="@string/search_book" />

        <TextView
            android:id="@+id/tv_reader_info"
            style="@style/operator_style"
            android:layout_below="@+id/tv_back_book"
            android:layout_toRightOf="@+id/tv_search_book"
            android:text="@string/reader_info" />

    </RelativeLayout>

</LinearLayout>